# ClientServerChatApp

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  Commands.h  Console.cpp  Console.h  DeferExec.h  Logger.cpp  Logger.h  Printer.h  README.md  RingBuffer.h  Server.cpp  Server.h  ShutdownTasks.cpp  ShutdownTasks.h  SocketEntity.cpp  SocketEntity.h  SocketHelpers.cpp  SocketHelpers.h  SyncPoint.h  TwoWayChannel.h  build-and-start.sh  clientmain.cpp  env  pch.h  servermain.cpp
libsocket/: CMakeLists.txt  Errors.h  README.md  Socket.cpp  Socket.h  pch.h
